Вытаращил из версии с эмулятором читалку для кэновских записей. Отвязал её от зависимостией от can-библиотек

--- a/Tracking/Tracking.csproj
+++ b/Tracking/Tracking.csproj
@@ -98,6 +98,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formatters\CanLog\CanFrameLogRecord.cs" />
+    <Compile Include="Formatters\CanLog\CanLogTrackFormatter.cs" />
+    <Compile Include="Formatters\CanLog\MmAltLongFrame.cs" />
     <Compile Include="Formatters\GpxTrackFormatter.cs" />
     <Compile Include="Formatters\ITrackFormatter.cs" />
     <Compile Include="Formatters\PlainRadianTextFormatter.cs" />
