Переведено на новый формат InstallerTools без использования Nuke (самописный вариант)

--- a/.gitignore
+++ b/.gitignore
@@ -95,7 +95,6 @@ AppPackages/
 [Bb]in
 [Oo]bj
 sql
-TestResults
 [Tt]est[Rr]esult*
 *.Cache
 ClientBin
@@ -111,3 +110,4 @@ Backup*/
 UpgradeLog*.XML
 
 .vs/
+/.output/
