--- a/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
+++ b/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
@@ -1,196 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F88BA4DE-2663-44C1-A953-F0D5E49396A1}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MapViewer.Emulation.Blok</RootNamespace>
-    <AssemblyName>MapViewer.Emulation.Blok</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="JetBrains.Annotations, Version=10.3.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
-      <HintPath>..\packages\JetBrains.Annotations.10.3.0\lib\net\JetBrains.Annotations.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="Prism, Version=6.1.0.0, Culture=neutral, PublicKeyToken=91a96d2a154366d8, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.Core.6.1.0\lib\net45\Prism.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Prism.Wpf, Version=6.1.0.0, Culture=neutral, PublicKeyToken=91a96d2a154366d8, processorArchitecture=MSIL">
-      <HintPath>..\packages\Prism.Wpf.6.1.0\lib\net45\Prism.Wpf.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="ReactiveUI, Version=6.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\reactiveui-core.6.5.0\lib\Net45\ReactiveUI.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Splat, Version=1.6.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Splat.1.6.2\lib\Net45\Splat.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Reactive.Core, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.Interfaces, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rx-Interfaces.2.2.5\lib\net45\System.Reactive.Interfaces.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.Linq, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rx-Linq.2.2.5\lib\net45\System.Reactive.Linq.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.PlatformServices, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rx-PlatformServices.2.2.5\lib\net45\System.Reactive.PlatformServices.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.Windows.Threading, Version=2.2.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Rx-XAML.2.2.5\lib\net45\System.Reactive.Windows.Threading.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Can\ICanPortHandlerProvider.cs" />
-    <Compile Include="Can\AppiCanPortHandlerProvider.cs" />
-    <Compile Include="Can\UdpCanPortHandlerProvider.cs" />
-    <Compile Include="Can\UdpCan\ICanToUdpPacker.cs" />
-    <Compile Include="Can\UdpCan\UdpCanPort.cs" />
-    <Compile Include="Emission\EmissionOptionAttribute.cs" />
-    <Compile Include="Emission\IBlokEmitter.cs" />
-    <Compile Include="Emission\IBlokEmitterFactory.cs" />
-    <Compile Include="Emission\Implementations\CanBlokEmitterFactory.cs" />
-    <Compile Include="Emission\Implementations\CanBlokEmitter.cs" />
-    <Compile Include="Emission\Implementations\ElectronicMapImitationEmitter.cs" />
-    <Compile Include="Emission\Implementations\ElectronicMapImitationEmitterFactory.cs" />
-    <Compile Include="Emission\Implementations\UdpBlokEmitter.cs" />
-    <Compile Include="Emission\Implementations\UdpBlokEmitterFactory.cs" />
-    <Compile Include="Emission\NavigationInformation.cs" />
-    <Compile Include="Emission\Options\IDescriptorEmissionOption.cs" />
-    <Compile Include="Emission\Options\IEmissionOption.cs" />
-    <Compile Include="Emission\Options\OptionsHelper.cs" />
-    <Compile Include="Modules\BlokEmulationInterfaceModule.cs" />
-    <Compile Include="Modules\BlokEmulationServicesModule.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\BlokEmulationParameters.cs" />
-    <Compile Include="ViewModels\BlokEmulationViewModel.cs" />
-    <Compile Include="ViewModels\EmissionDescriptorViewModel.cs" />
-    <Compile Include="ViewModels\Options\ComPortSelectorViewModel.cs" />
-    <Compile Include="ViewModels\Options\DescriptorSelectorViewModel.cs" />
-    <Compile Include="ViewModels\Options\Producing\EmissionOptionViewModelFactory.cs" />
-    <Compile Include="ViewModels\Options\Producing\EmissionOptionViewModelFactoryRegistrationHelper.cs" />
-    <Compile Include="ViewModels\Options\Producing\IEmissionOptionViewModelFactory.cs" />
-    <Compile Include="ViewModels\Options\Producing\IOptionViewModelsSetFactory.cs" />
-    <Compile Include="Views\BlokEmulationView.xaml.cs">
-      <DependentUpon>BlokEmulationView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Wheels\CanWheel.cs" />
-    <Compile Include="Wheels\CanWheelFactory.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Can\BlokFrames\BlokFrames.csproj">
-      <Project>{405B0F26-46EE-4D8C-9267-652F7D4C4AB0}</Project>
-      <Name>BlokFrames</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Can\Communications.Appi\Communications.Appi.csproj">
-      <Project>{5A812723-E98B-4B82-AE7B-8E2747D8541F}</Project>
-      <Name>Communications.Appi</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Can\Communications\Communications.csproj">
-      <Project>{6C5B1ECA-5187-4F63-8CF1-C17DF50D0F65}</Project>
-      <Name>Communications</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Geographics\Geographics.csproj">
-      <Project>{4EAF91DF-7A6C-4F0E-B15B-F372CE42C8D0}</Project>
-      <Name>Geographics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MapViewer.Emulation\MapViewer.Emulation.csproj">
-      <Project>{45DBB5B9-9527-4394-AD47-59EE02BD0E5E}</Project>
-      <Name>MapViewer.Emulation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MapViewer.Shared\MapViewer.Shared.csproj">
-      <Project>{4B6E0840-94A8-4CCD-AAB8-C4C24383229E}</Project>
-      <Name>MapViewer.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Tracking\Tracking.csproj">
-      <Project>{D8EA3F6F-A88B-475A-89DF-3B1CA6C5AD8D}</Project>
-      <Name>Tracking</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Include="Views\BlokEmulationView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
     <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+        <TargetFramework>net461</TargetFramework>
+        <OutputType>library</OutputType>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <UseWPF>true</UseWPF>
     </PropertyGroup>
-    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+    <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" Version="10.3.0" />
+        <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+        <PackageReference Include="Prism.Wpf" Version="6.1.0" />
+        <PackageReference Include="reactiveui-core" Version="6.5.0" />
+        <PackageReference Include="Rx-Interfaces" Version="2.2.5" />
+        <PackageReference Include="Rx-Linq" Version="2.2.5" />
+        <PackageReference Include="Splat" Version="1.6.2" />
+        <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+        <PackageReference Include="Unity" Version="4.0.1" />
+    </ItemGroup>
+    <ItemGroup>
+        <Reference Include="PresentationCore" />
+        <Reference Include="PresentationFramework" />
+        <Reference Include="System.Xaml" />
+        <Reference Include="WindowsBase" />
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Can\BlokFrames\BlokFrames.csproj" />
+        <ProjectReference Include="..\Can\Communications.Appi\Communications.Appi.csproj" />
+        <ProjectReference Include="..\MapViewer.Emulation\MapViewer.Emulation.csproj" />
+        <ProjectReference Include="..\MapViewer.Shared\MapViewer.Shared.csproj" />
+        <ProjectReference Include="..\Tracking\Tracking.csproj" />
+    </ItemGroup>
 </Project>
