Починил проблему с перекрывающимся меню, убрал мини-панель справа, перевёл некоторые проекты из .Net Standard на .Net Framework 4.6.1

--- a/EMapNavigator/EMapNavigator.csproj
+++ b/EMapNavigator/EMapNavigator.csproj
@@ -45,4 +45,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Fonts\Linearicons-Free.ttf" />
+    <Resource Include="Fonts\Linearicons-Free.ttf" />
+  </ItemGroup>
 </Project>
